bug fix & css fix

--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/css/980.css
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/css/980.css
@@ -67,7 +67,7 @@ label{
 	font-size: 64px;
 	border: 0;
 	background-color: transparent;
-	width: 130px;
+	/*width: 130px;*/
 	text-indent: 16px;
 	display:inline-block;
 	color: #5c6d66;
