--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/css/720.css
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/css/720.css
@@ -67,7 +67,7 @@ label{
 	font-size: 38px;
 	border: 0;
 	background-color: transparent;
-	width: 76px;
+	/*width: 76px;*/
 	text-indent: 14px;
 	display:inline-block;
 	color: #5c6d66;
