--- a/IOS/GearsGameCenter/GearsGameCenter/games/whois/css/1280.css
+++ b/IOS/GearsGameCenter/GearsGameCenter/games/whois/css/1280.css
@@ -66,7 +66,7 @@ li.selected{
 	font-size: 80px;
 	border: 0;
 	background-color: transparent;
-	width: 160px;
+	/*width: 160px;*/
 	text-indent: 20px;
 	display:inline-block;
 	color: #5c6d66;
